<resources>
    <string name="app_name">Dailoz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_screen_message">Plan what you will do to be more organized for today, tomorrow and beyond</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_with">or with</string>
    <string name="dont_have_account">Don\'t have an account? Sign Up</string>
</resources>